@@ -1,5 +1,10 @@
 2004-06-17  Jan Nieuwenhuizen  <janneke@gnu.org>
 
+	* lily/lily-guile.cc: 
+	* lily/pangofc-afm-decoder.cc:
+	* lily/include/pangofc-afm-decoder.hh: Use #if HAVE_* iso #ifdef.
+	Fixes build without Pango CVS.
+
 	* Documentation/topdocs/NEWS.texi (Top): Mention GNOME backend for
 	developers.
 
